<resources>
    <string name="app_name">Break Timer</string>

    <string name="action_settings">Settings</string>
    <string name="set_work_label">Work Time</string>
    <string name="set_break_label">Break Time</string>
    <string name="picker_divider">:</string>
    <string name="start_timer_button_text">Start</string>
    <string name="title_activity_work_timer">WorkTimer</string>
    <string name="pause_timer_button_text">Pause</string>
    <string name="restart_timer_button_text">Start</string>
    <string name="stop_timer_button_text">Stop</string>
    <string name="title_activity_work_to_break">WorkToBreakActivity</string>

    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>

    <string name="work_time_picker_dialog_title">Pick Work Time</string>
    <string name="break_time_picker_dialog_title">Pick Break Time</string>

    <string name="work_to_break_alarm_text">TIME FOR BREAK!</string>
    <string name="break_to_work_alarm_text">TIME FOR WORK!</string>
</resources>
