<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/hour_picker"
            android:layout_width="70dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/picker_separator"
            android:textSize="@dimen/colon_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picker_divider"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:id="@+id/min_picker"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:onClick="cancelButtonOnClick"/>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:onClick="okButtonOnClick"/>

    </LinearLayout>

</LinearLayout>